--- a/src/pages/pricelist/pricelist.styles.css
+++ b/src/pages/pricelist/pricelist.styles.css
@@ -7,5 +7,4 @@
 
 .main-layout {
   display: flex;
-  flex: 1;
 }
